--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.5",
     "react": "18.3.1",
-    "react-native": "0.77.0"
+    "react-native": "0.77.0",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-video": "^6.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
