--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^4.5.5",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
-    "react-native-orientation-locker": "^1.7.0",
+    "react-native-gesture-handler": "^2.22.1",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
     "react-native-video": "^6.9.1"
   },
   "devDependencies": {
